# YAAD

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  build.gradle  settings.gradle
.github/workflows/: push-build.yml
app/: .gitignore  build.gradle  buildInfo.gradle  ffmpeg_setup.gradle  proguard-rules.pro
app/src/androidTest/java/io/github/yearsyan/yaad/: ExampleInstrumentedTest.kt  FileUtilsTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/aidl/io/github/yearsyan/yaad/: IExtractorService.aidl
app/src/main/cpp/: CMakeLists.txt  library.c
app/src/main/cpp/include/ext/x86_64/libavutil/: ffversion.h
app/src/main/cpp/src/: library.cpp
app/src/main/java/io/github/yearsyan/yaad/: AppApplication.kt  MainActivity.kt  ScanActivity.kt
app/src/main/python/: dukpy.py  run_yt_dlp.py  you_get_extractor.py
app/src/main/res/drawable/: ic_launcher.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_round.xml
app/src/main/res/layout/: activity_scan.xml  layout_compose.xml  webview_dialog.xml
app/src/main/res/values/: strings.xml  style.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/io/github/yearsyan/yaad/: ExampleUnitTest.kt
config/hooks/: pre-commit  pre-commit.bat
downloader-core/: build.gradle
downloader-core/src/androidTest/java/io/github/downloader_core/: ExampleInstrumentedTest.kt
downloader-core/src/main/cpp/: CMakeLists.txt  bt.cpp  bt.h  lib.cpp
downloader-core/src/main/java/io/github/yaad/downloader_core/: FileHashUtils.kt  HttpDownloadSession.kt  IDownloadListener.kt  IDownloadSession.kt  NativeBridge.kt  Util.kt
downloader-core/src/test/java/io/github/downloader_core/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
player/: build.gradle
player/src/main/: AndroidManifest.xml
scripts/: fix_line_endings.py  update_abi_filters.sh  upload_file.sh
(+92 files in other folders)
